k8s/deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: timecard-api
  namespace: timecard
spec:
  selector:
    matchLabels:
      app: timecard-api
  replicas: 1
  template:
    metadata:
      labels:
        app: timecard-api
    spec:
      containers:
        - name: timecard-api
          image: asia.gcr.io/timecard-proj/timecard-api
          volumeMounts:
            - name: service-account-credentials
              mountPath: /secrets
              readOnly: true
          ports:
          - containerPort: 5000
      volumes:
        - name: service-account-credentials
          secret:
            secretName: appkey
      restartPolicy: Always

---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: timecard-web
  namespace: timecard
spec:
  selector:
    matchLabels:
      app: timecard-web
  replicas: 1
  template:
    metadata:
      labels:
        app: timecard-web
    spec:
      containers:
        - name: timecard-web
          image: asia.gcr.io/timecard-proj/timecard-web
          volumeMounts:
            - name: service-account-credentials
              mountPath: /secrets
              readOnly: true
          ports:
          - containerPort: 3000
          livenessProbe:
            initialDelaySeconds: 10
            periodSeconds: 10
            exec:
              command:
                - "true"
          readinessProbe:
            httpGet:
              path: /healthz
              port: 3000
      volumes:
        - name: service-account-credentials
          secret:
            secretName: appkey
      restartPolicy: Always
